Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/InvalidImportsNoClasses.out
InvalidImportsNoClasses.java:10:24: compiler.err.doesnt.exist: nonexistent.pack
1 error
